--- a/package.json
+++ b/package.json
@@ -6,6 +6,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "typescript": "^5.1.5"
+    "@typescript-eslint/eslint-plugin": "^7.6.0",
+    "@typescript-eslint/parser": "^7.6.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-stylelint": "^21.0.0",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "htmlhint": "^1.1.4",
+    "postcss-styled-components": "^0.2.1",
+    "prettier": "^3.2.5",
+    "prettier-stylelint": "^0.4.2",
+    "stylelint": "^16.3.1",
+    "stylelint-config-clean-order": "^5.4.2",
+    "stylelint-config-standard": "^36.0.0",
+    "stylelint-config-standard-scss": "^13.1.0",
+    "stylelint-prettier": "^5.0.0",
+    "typescript": "^5.4.4"
   }
 }
